--- a/WORDPRESS_SITE/wp-content/themes/customtheme-child/styles/style.scss
+++ b/WORDPRESS_SITE/wp-content/themes/customtheme-child/styles/style.scss
@@ -18,9 +18,11 @@ body {
     text-decoration: unset;
     margin-left: 10px;
     margin-right: 10px;
+    cursor: pointer;
 }
 
 .header {
+    z-index: 2;
     display: flex;
     height: 87px;
     position: absolute;
@@ -60,6 +62,7 @@ body {
 }
 
 .about_text {
+    position: fixed;
     max-height: 283px;
     overflow: overlay;
     margin-top: 130px;
@@ -67,9 +70,20 @@ body {
     margin-left: 200px;
     margin-bottom: 100px;
     font-size: medium;
-    border-radius: 15px;
 }
 
+.about_div {
+    position: absolute;
+    z-index: 1;
+    background-image: url(images/bg.584ad7a0.jpg);
+    width: -webkit-fill-available;
+    height: -webkit-fill-available;
+    background-color: rgb(59 58 58);
+    /* background-repeat: no-repeat; */
+    /* background-size: auto; */
+    /* font-family: sans-serif; */
+    /* color: #f5e7d8;*/
+}
 
 .canvas {
     margin-top: 55px;
@@ -108,6 +122,27 @@ body {
     border-color: #ffffffa6;
     border-style: dashed;
     cursor: context-menu;
+
+    &-about-page {
+        position: fixed;
+        // position: relative;
+    z-index: 2;
+    margin-top: 0px;
+    width: 110px;
+    margin-left: 35px;
+    font-size: medium;
+    background-color: #5d4b3366;
+    padding: 3px;
+    display: flex;
+    justify-content: center;
+    border-radius: 8px;
+    border-width: 2px;
+    border-color: #ffffffa6;
+    border-style: dashed;
+    cursor: context-menu;
+        top: 108px;
+    right: 26px;
+    }
 }
 
 .button-text {
