--- a/WORDPRESS_SITE/wp-content/themes/customtheme-child/styles/style.scss
+++ b/WORDPRESS_SITE/wp-content/themes/customtheme-child/styles/style.scss
@@ -64,8 +64,8 @@ body {
     max-height: 283px;
     overflow: overlay;
     margin-top: 130px;
-    margin-right: 200px;
-    margin-left: 200px;
+    margin-right: 100px;
+    margin-left: 100px;
     margin-bottom: 100px;
     font-size: medium;
 }
@@ -272,4 +272,16 @@ body {
     position: relative;
     top: 94px;
     left: -4px;
+}
+
+@media (max-width:520px){
+    .pallet{
+        margin-top: 92px;
+    }
+
+    .about_text{
+        margin-right: 50px;
+    margin-left: 50px;
+    margin-top: 245px;
+    }
 }
