--- a/WORDPRESS_SITE/wp-content/themes/customtheme-child/styles/style.scss
+++ b/WORDPRESS_SITE/wp-content/themes/customtheme-child/styles/style.scss
@@ -61,7 +61,7 @@ body {
 
 .about_text {
     position: fixed;
-    max-height: 283px;
+    max-height: 60%;
     overflow: overlay;
     margin-top: 130px;
     margin-right: 100px;
