--- a/WORDPRESS_SITE/wp-content/themes/customtheme-child/styles/style.scss
+++ b/WORDPRESS_SITE/wp-content/themes/customtheme-child/styles/style.scss
@@ -203,7 +203,7 @@ body {
     color: #000;
     transform: rotate(-3deg);
     margin-left: 15px;
-    margin-bottom: -102px;
+    margin-bottom: -105px;
 
     &-db {
         position: relative;
@@ -214,9 +214,11 @@ body {
         text-decoration: none;
         color: #000;
         transform: rotate(-3deg);
-        margin-top: -81px;
+        margin-top: -73px;
         margin-left: -113px;
         max-width: 100px;
+        margin-bottom: 0px;
+        max-height: 165px;
     }
 
     &-input {
@@ -224,7 +226,7 @@ body {
         height: 87px;
         width: 104px;
         padding: 8px;
-        padding-top: 7px;
+        padding-top: 9px;
         box-shadow: 8px 6px 9px rgb(0 0 0 / 51%);
         border-color: #ffffff00;
         border-left-width: 24px;
@@ -252,7 +254,7 @@ body {
         color: black;
         border-radius: 17px;
         position: relative;
-        top: 29px;
+        top: 32px;
         left: 3px;
         width: 24px;
     }
@@ -262,7 +264,7 @@ body {
         color: black;
         border-radius: 17px;
         position: relative;
-        top: -82px;
+        top: -80px;
         left: 3px;
         width: 24px;
         height: 24px;
