--- a/WORDPRESS_SITE/wp-content/themes/customtheme-child/styles/style.scss
+++ b/WORDPRESS_SITE/wp-content/themes/customtheme-child/styles/style.scss
@@ -310,6 +310,13 @@ body {
     }
 }
 
+.construction{
+    color: #de6767;
+    margin-top: 18px;
+    text-align: center;
+    text-decoration: underline;
+}
+
 @media (max-width:377px){
     .s-notes-db-container {
         margin-top: 171px;
