--- a/WORDPRESS_SITE/wp-content/themes/customtheme-child/styles/style.scss
+++ b/WORDPRESS_SITE/wp-content/themes/customtheme-child/styles/style.scss
@@ -313,6 +313,7 @@ body {
 .construction{
     color: #de6767;
     margin-top: 18px;
+    margin-bottom: 20px;
     text-align: center;
     text-decoration: underline;
 }
