--- a/WORDPRESS_SITE/wp-content/themes/customtheme-child/styles/style.scss
+++ b/WORDPRESS_SITE/wp-content/themes/customtheme-child/styles/style.scss
@@ -126,7 +126,7 @@ body {
     border-width: 2px;
     border-color: #ffffffa6;
     border-style: dashed;
-    cursor: context-menu;
+    cursor: pointer;
 
     &-about-page {
         position: fixed;
