--- a/WORDPRESS_SITE/wp-content/themes/customtheme-child/styles/style.scss
+++ b/WORDPRESS_SITE/wp-content/themes/customtheme-child/styles/style.scss
@@ -205,6 +205,7 @@ body {
     margin-left: 15px;
     margin-bottom: -105px;
 
+
     &-db {
         position: relative;
         top: 150px;
@@ -214,12 +215,16 @@ body {
         text-decoration: none;
         color: #000;
         transform: rotate(-3deg);
-        margin-top: -73px;
+        margin-top: -77px;
         margin-left: -113px;
         max-width: 100px;
         margin-bottom: 0px;
         max-height: 165px;
+
+
     }
+    
+
 
     &-input {
         background: #ffc;
@@ -280,6 +285,14 @@ body {
     }
 }
 
+.s-notes-db:hover{
+    
+    z-index: 9;
+}
+.s-notes-input{
+    box-shadow: -1px 2px 9px 3px rgba(0, 0, 0, 0.51);
+}
+
 .afc_images {
     width: 145px;
     transform: rotate(-3deg);
@@ -289,6 +302,12 @@ body {
     top: 94px;
     left: -4px;
 }
+.afc_images:hover{
+    
+    z-index: 9;
+    box-shadow: -1px 2px 9px 3px rgba(0, 0, 0, 0.51);
+}
+
 
 @media (max-width:520px){
     .pallet{
