--- a/test-new-wpdb/views/index.ejs
+++ b/test-new-wpdb/views/index.ejs
@@ -5,7 +5,7 @@
   <body style="background-color: #171717; color: rgb(173, 179, 185); font-size: 30px; display: flex; flex-direction: column; margin-top: 80px; justify-content: center; align-items: center;">
 
     <div>
-      ExpressJs Template Server
+      ExpressJs Server
     </div>
 
   </body>
