--- a/WORDPRESS_SITE_JS/wp-content/themes/customtheme-child/styles/style.scss
+++ b/WORDPRESS_SITE_JS/wp-content/themes/customtheme-child/styles/style.scss
@@ -105,7 +105,7 @@ body {
 
 .scroll-notes{
     margin-top: 88px;
-    max-height: 500px;
+    // max-height: 500px;
     overflow-y: scroll;
     scrollbar-width: none;
     height: 95vh;
